; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_materialize.c_time_range_internal_to_max_time_value.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_materialize.c_time_range_internal_to_max_time_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DT_NOEND = common dso_local global i32 0, align 4
@DATEVAL_NOEND = common dso_local global i32 0, align 4
@PG_INT64_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @time_range_internal_to_max_time_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @time_range_internal_to_max_time_value(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %14 [
    i32 129, label %5
    i32 128, label %8
    i32 130, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @DT_NOEND, align 4
  %7 = call i32 @TimestampGetDatum(i32 %6)
  store i32 %7, i32* %2, align 4
  br label %18

8:                                                ; preds = %1
  %9 = load i32, i32* @DT_NOEND, align 4
  %10 = call i32 @TimestampTzGetDatum(i32 %9)
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* @DATEVAL_NOEND, align 4
  %13 = call i32 @DateADTGetDatum(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %18

14:                                               ; preds = %1
  %15 = load i32, i32* @PG_INT64_MAX, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ts_internal_to_time_value(i32 %15, i32 %16)
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %14, %11, %8, %5
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @TimestampGetDatum(i32) #1

declare dso_local i32 @TimestampTzGetDatum(i32) #1

declare dso_local i32 @DateADTGetDatum(i32) #1

declare dso_local i32 @ts_internal_to_time_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
